--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
        <div class="row">
       <div class="col-sm-6 col-md-4 col-lg-3 border border-light">
         <div class="card">
-          <img src="D:\网页设计\龙猫\个人主页\img\001.jpg" class="card-img-top">
+          <img src="img\001.jpg" class="card-img-top">
           <div class="card-body text-center">
             <p class="card-text">插画</p>
           </div>
@@ -113,7 +113,7 @@
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3 border border-light">
         <div class="card">
-          <img src="D:\网页设计\龙猫\个人主页\img\002.jpg" class="card-img-top">
+          <img src="img\002.jpg" class="card-img-top">
           <div class="card-body text-center">
             <p class="card-text">插画</p>
           </div>
@@ -121,7 +121,7 @@
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3 border border-light">
         <div class="card">
-          <img src="D:\网页设计\龙猫\个人主页\img\003.jpg" class="card-img-top">
+          <img src="img\003.jpg" class="card-img-top">
           <div class="card-body text-center">
             <p class="card-text">插画</p>
           </div>
@@ -130,7 +130,7 @@
      
       <div class="col-sm-6 col-md-4 col-lg-3 border border-light">
         <div class="card">
-          <img src="D:\网页设计\龙猫\个人主页\img\005.jpg" class="card-img-top">
+          <img src="img\005.jpg" class="card-img-top">
           <div class="card-body text-center">
             <p class="card-text">插画</p>
           </div>
